[package]
name = "samp-sdk"
version = "0.9.2"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Bindings for C SA:MP SDK"
license = "MIT"
repository = "https://github.com/zottce/samp-rs/"
readme = "readme.md"
edition = "2021"

[features]
default = []
encoding = ["encoding_rs"]

[dependencies]
bitflags = "1.3.2"
encoding_rs = { version = "0.8.31", optional = true }

[build-dependencies]
colored = "2.0.0"

[package.metadata.docs.rs]
features = ["encoding"]